# mdk_01.04

LR_1/: CMakeLists.txt  main.cpp
PR_1/: CMakeLists.txt  Hello.c  app.c  main.c
PR_10/: CMakeLists.txt  main.cpp
PR_11/: CMakeLists.txt  MathLib.cpp  MathLib.h  main.cpp
PR_12/: CMakeLists.txt  Library.cpp  Library.h  main.cpp
PR_2/: CMakeLists.txt  PR_2.sln  main.cpp
PR_2/PR_2/: Program.cs
PR_3/: CMakeLists.txt  PR_3.sln  main.cpp
PR_3/PR_3/: Program.cs
PR_4/: CMakeLists.txt  PR_4.sln  main.cpp
PR_4/PR_4/: Program.cs
PR_5/: PR_5.sln
PR_5/PR_5/: Program.cs
PR_6/: CMakeLists.txt  PR_6.sln  main.cpp
PR_6/PR_6/: Program.cs
PR_7/: PR_7.sln
PR_7/PR_7/: Program.cs
PR_8/: CMakeLists.txt  PR_8.sln  main.cpp
PR_8/PR_8/: Program.cs
PR_9/: CMakeLists.txt  main.cpp
PZ_13/: CMakeLists.txt  main.cpp
PZ_14/: CMakeLists.txt  main.cpp
PZ_15/: CMakeLists.txt  main.cpp
PZ_16/: CMakeLists.txt  main.cpp
PZ_17/: PZ_17.slnx
PZ_17/PZ_17/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  Student.cs
PZ_18/: PZ_18.slnx
PZ_18/PZ_18/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
PZ_19/: PZ_19.slnx
PZ_19/PZ_19/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
PZ_20/: PZ_20.sln
PZ_20/PZ_20/: PZ_20.csproj  Program.cs
PZ_21/: PZ_21.slnx
PZ_21/PZ_21/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
PZ_22/: PZ_22.slnx
PZ_22/PZ_22/: App.xaml  (+4 more)
PZ_23/: PZ_23.slnx
PZ_24/: PZ_24.slnx
PZ_25/: PZ_25.slnx
PZ_26/: PZ_26.slnx
(+39 files in other folders)
